Fix projects section links spacing in mobile

--- a/src/styles/basic.css
+++ b/src/styles/basic.css
@@ -74,15 +74,15 @@ h6 {
 }
 
 h1 {
-  font-size: calc(var(--base-font-size) * 3);
+  font-size: calc(var(--base-font-size) * 2.4);
 }
 
 h2 {
-  font-size: calc(var(--base-font-size) * 2.5);
+  font-size: calc(var(--base-font-size) * 2.1);
 }
 
 h3 {
-  font-size: calc(var(--base-font-size) * 2);
+  font-size: calc(var(--base-font-size) * 1.8);
 }
 
 h4 {
